--- a/bugflow/templates/accounts/add_user.html
+++ b/bugflow/templates/accounts/add_user.html
@@ -1,1 +1,52 @@
-<h1>Novo usuário</h1>
+{% extends 'base.html' %}
+
+{% load widget_tweaks %}
+
+
+{% block title %}
+    {{ block.super }} - Criar conta
+{% endblock title %}
+
+
+{% block body %}
+    <div class="container">
+        <h1>Criar conta</h1>
+        
+        {% if messages %}
+            <div class="alert alert-success" role="alert">
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            </div>
+                
+        {% endif %}
+            
+        <form method='post'>
+        {% csrf_token %}
+            <div class="form-group">
+                <label for="">Nome</label>
+                {{ form.first_name }}
+            </div>
+            <div class="form-group">
+                <label for="">Sobrenome</label>
+                {{ form.last_name|add_class:'form-control' }}
+            </div>
+            <div class="form-group">
+                <label for="">E-mail</label>
+                {{ form.email|add_class:'form-control' }}
+            </div>
+            <div class="form-group">
+                <label for="">Usuário</label>
+                {{ form.username|add_class:'form-control' }}
+            </div>
+            <div class="form-group">
+                <label for="">Senha</label>
+                {{ form.password|add_class:'form-control' }}
+            </div>
+            <div class="form-group">
+                <button type='submit' class="btn btn-primary">Criar</button>
+            </div>
+        </form>
+    </div>
+{% endblock body %}
+    
