--- a/bugflow/templates/base.html
+++ b/bugflow/templates/base.html
@@ -43,17 +43,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Bugflow</a>
+          <a class="navbar-brand" href="/">Bugflow</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
+          <form class="navbar-form navbar-right" method="POST" action="{% url 'accounts:user-login' %}">
+            {% csrf_token %}
             <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+              <input type="text" name="username" placeholder="Digite seu usuário" class="form-control">
             </div>
             <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
+              <input type="password" name="password" placeholder="Digite sua senha" class="form-control">
             </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
+            <button type="submit" class="btn btn-success">Entrar</button>
+            <a href="{% url 'accounts:add-user' %}" class="btn btn-primary">Criar conta</a>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
