--- a/bugflow/templates/accounts/user_profile.html
+++ b/bugflow/templates/accounts/user_profile.html
@@ -23,7 +23,7 @@
         <p>Usuário: {{ user.username }}</p>
         <p>E-mail: {{ user.email }}</p>
         <a href="{% url 'accounts:edit-user' %}" class="btn btn-primary btn-xs">Editar perfil</a>
-        <a href="" class="btn btn-primary btn-xs">Trocar senha</a>
+        <a href="{% url 'accounts:change-password' %}" class="btn btn-primary btn-xs">Trocar senha</a>
     </div>
 {% endblock body %}
     
