--- a/bugflow/templates/base.html
+++ b/bugflow/templates/base.html
@@ -20,6 +20,9 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static "css/jumbotron.css" %}" rel="stylesheet">
+    
+    <!-- User login screen -->
+    <link href="{% static "css/signin.css" %}" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -74,14 +77,15 @@
 
     
     {% block body %}
-      
+    
     {% endblock body %}
-      
+    
+    <div class="container">
 
       <hr>
 
       <footer>
-        <p>&copy; 2016 Company, Inc.</p>
+        <p>&copy; 2018 BugFlow Company, Inc.</p>
       </footer>
     </div> <!-- /container -->
 
