--- a/bugflow/templates/projects/new_project.html
+++ b/bugflow/templates/projects/new_project.html
@@ -27,6 +27,7 @@
                 
         {% endif %}
             
+            
         <form method='post' autocomplete="off">
         {% csrf_token %}
             <div class="form-group">
@@ -133,6 +134,22 @@
                 </div>
             {% endif %}
 
+            
+            {% if form.instance.id %}
+                <div class="form-group">
+                    <label for="{{ form.status.id_for_label }}">{{ form.status.label }}</label>
+                    {{ form.status|add_class:'form-control' }}
+                </div>
+                
+                {% if form.status.errors %}
+                <div class="form-group">
+                    <div class="alert alert-warning" role="alert">
+                        {{ form.status.errors.as_text }}
+                    </div>
+                </div>
+                {% endif %}
+            {% endif %}
+                
             <div class="form-group">
                 
                 {% if form.instance.id %}
